# goldx

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  environment.yml  lefthook.yml  main.py  pyproject.toml  renovate.json  setup.py
.basedpyright/: baseline.json
.github/workflows/: ci.yml
examples/: COMPARISON.md  RESULTS.md
src/goldx/: __init__.py  attacking.py  baselines.py  cli.py  explaining.py  imagenet.py  masking.py  metrics.py  pipeline.py  reporting.py
tests/: test_attacking.py  test_baselines.py  test_explaining.py  test_masking.py  test_metrics.py  test_metrics_extra.py  test_reporting.py
