[project]
name = "goldx"
version = "0.2.0"
description = "Ground-truth explanations for visual classifiers"
readme = "README.md"
authors = [{ name = "Jan Philip Göpfert", email = "janphilip@gopfert.eu" }]
license = "Unlicense"
requires-python = ">=3.14"
keywords = ["machine-learning", "explainability", "xai", "adversarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "captum>=0.9",
    "matplotlib>=3.10",
    "numpy>=2",
    "pillow>=11",
    "pyarrow>=18",
    "torch>=2.6",
    "torchvision>=0.21",
]

[project.scripts]
goldx = "goldx.cli:main"

[project.urls]
Source = "https://github.com/jangop/goldx"
"Bug Reports" = "https://github.com/jangop/goldx/issues"

[dependency-groups]
dev = [
    "basedpyright>=1.29",
    "commitizen>=4",
    "lefthook>=2.1",
    "pytest>=8",
    "ruff>=0.14",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.ruff]
# target-version inferred from project.requires-python (single source).
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "PTH"]

[tool.ruff.lint.per-file-ignores]
"src/goldx/imagenet.py" = ["E501"]

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
